tests/NormalTests/paczka1/fuzzy1/74738785.err
Error in line 3: 2dTTp A611 78,7
Error in line 5: rZMRmo S306 45,7
Error in line 9: YtBp S306 29,5
Error in line 2: Saj5WXCaOCu S954 99,6
Error in line 8: rZMRmo S954 82,1
Error in line 18: 2dTTp A611 6,2
Error in line 29: YtBp S954 6,3
Error in line 25: A611 S954 71,4
